# shoyu

./: .env.example  .gitignore  README.md
backend/: .env.example  Cargo.toml
backend/.sqlx/: query-1fb93659b334b28cb4cf0bb482ece6817652af2d6e87764b70d28da7d25caccf.json  query-30c935ed4c618578e20c5dde29433f9256ccbfc9e4317127330d20a95d5aeb05.json  query-e99ceee0389b03d93c356ea560ccb8f98877ded9d6e7cbd120a709adc9dd4efe.json
backend/migrations/: 0001_create_initial_tables.sql  init.sql
backend/src/: main.rs
backend/src/db/: config.rs  mod.rs
backend/src/features/: mod.rs
backend/src/features/chefs/: controller.rs  mod.rs  model.rs  router.rs  service.rs
backend/src/features/shared/models/: timestamps.rs
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  main.tsx
frontend/src/components/: login-form.tsx  setup-form.tsx  with-magnetic-hoc.tsx
frontend/src/components/layouts/: MainLayout.tsx  StartupLayout.tsx
frontend/src/components/theme-provider/: theme-provider.tsx  theme-toggle.tsx
frontend/src/components/ui/Loader/: index.tsx
frontend/src/components/users/: index.ts  logout-button.tsx  types.ts  useUserStore.ts  useUsers.ts  user-card-select.tsx  user-card.tsx
frontend/src/lib/: queryClient.ts
frontend/src/pages/: Dashboard.tsx  ErrorPage.tsx  NotFound.tsx  SignUp.tsx
frontend/src/routes/: router.tsx
