[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.4"
chrono = { version = "0.4.41", features = ["serde"]}
serde = {version = "1.0.219", features = ["derive"]}
sqlx = {version = "0.8.6", features = ["sqlite", "runtime-tokio-native-tls", "macros"]}
tokio = { version = "1.45.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
